# oz_Django_assignment

./: README.md  db.sqlite3  pyproject.toml
Todo 과제파일/: .python-version  db.sqlite3
Todo 과제파일/bookmark/: admin.py  models.py  views.py
Todo 과제파일/bookmark/migrations/: 0001_initial.py
Todo 과제파일/config/: settings.py  urls.py
Todo 과제파일/templates/: Todo_info.html  bookmark_detail.html  bookmark_list.html
Todo 과제파일/templates/todo/: todo_info.html
Todo 과제파일/todo/: admin.py  forms.py  models.py  views.py
Todo 과제파일/todo/migrations/: 0001_initial.py  0002_todo_user.py
Todo 과제파일/users/: views.py
chapter_01/config/: settings.py  urls.py
chapter_01/templates/: book_list.html  gugu.html  movie.html  movies.html
config/: settings.py  urls.py
