[tool.poetry]
name = "django-assignment"
version = "0.1.0"
description = ""
authors = ["netrunner <netrunnerr25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
django = "^6.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
